# found-family

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  CLAUDE.md  Dockerfile  Justfile  LICENSE  MCP_IMPLEMENTATION_ANALYSIS.md  MCP_IMPROVEMENTS_SUMMARY.md  README.md  SECURITY.md  cloudflare-tunnel-config.yml  cloudflared-memory-palace.service  codex-setup.sh  copier.yml  copy_report.md  docker-compose.prod.yml  docker-compose.smoke.yml  docker-compose.yml  implementation-plan.md  main.py  memory-palace.env.jinja  notes.md  plan.md  plan2.md  pyproject.toml  pyrightconfig.json  records.json  repomix.config.json  run-prod.sh  run.sh  setup-cloudflare-tunnel.sh  setup.sh  tailscale-init-enhanced.sh  tailscale-init.sh  tailscale-serve.json  tailscale-serve.sh  temp.mcp.json  (+2 more)
.github/workflows/: ci.yml
docs/: CLAUDE_AI_INTEGRATION_STATUS.md  CLAUDE_AI_SETUP.md  RENOVATION.md  additional_deps.txt  debugs.md  enhanced-mcp-stream.py  fixed-mcp-discovery-final.py  mcp_oauth.py  oauth_endpoints.py  remote_mcp_server.py  server.py  test-mcp-final.py  tunnel.sh  updated_main.py
scripts/: README.md  adopt_embedding_provenance.py  backup_graph.py  import_curated_memories.py  import_friendship_memories.py  import_tiered_memories.py  link_memories.py  migrate_conversation_turns.py  migrate_legacy_graph.py  migrate_memory_types.py  reembed_corpus.py  review_memories.py  smoke_mcp.py  smoke_oauth.py
scripts/infrastructure/: cloudflare-tunnel-config.yml  cloudflared-memory-palace.service  scan-source.sh  setup-cloudflare-tunnel.sh  smoke-production-compose.sh
src/memory_palace/: main.py
src/memory_palace/api/: __init__.py  auth.py  dependencies.py  middleware.py  oauth.py
src/memory_palace/api/endpoints/: admin.py  core.py  memory.py  oauth.py  query.py  unified_query.py
src/memory_palace/auth/: __init__.py  oauth.py
src/memory_palace/core/: __init__.py  base.py  circuit_breaker.py  config.py  constants.py  decorators.py  error_context.py  errors.py  handlers.py
src/memory_palace/core/logging/: __init__.py  base.py  context.py  setup.py
src/memory_palace/domain/: protocols.py  services.py
src/memory_palace/domain/models/: __init__.py  analysis.py  base.py  conversation.py  embedding.py  memories.py  memory.py  ontology.py  utils.py
src/memory_palace/domain/specifications/: base.py  composite.py  memory.py  similarity.py
src/memory_palace/infrastructure/embeddings/: __init__.py  cache.py  factory.py  provenance.py  voyage.py  voyage_simple.py
src/memory_palace/infrastructure/neo4j/: driver.py  filter_compiler.py  identifiers.py  queries.py  simple_driver.py
src/memory_palace/infrastructure/neo4j/migrations/: 001_vector_index.cypher
src/memory_palace/infrastructure/neo4j/query_builder/: __init__.py  builder.py  builder_metrics.py  example.py  helpers.py  interfaces.py  metrics.py  pagination.py  patterns.py  specification_support.py  state.py  vector.py  vector_example.py
src/memory_palace/infrastructure/oauth/: __init__.py  models.py  store.py
src/memory_palace/infrastructure/repositories/: memory.py
src/memory_palace/mcp/: enhanced_server.py  event_store.py  mcp_server.py  mcp_streamable.py  server.py  stdio_server.py
src/memory_palace/services/: __init__.py  advanced_memory_service.py  consolidation.py  dream_jobs.py  memory_service.py
src/memory_palace/services/clustering/: __init__.py  dbscan_service.py
tests/: conftest.py  test_api_schemas.py  test_auth.py  test_circuit_breaker.py  test_clustering_service.py  test_config.py  test_consolidation.py  test_curated_import.py  test_cypher_identifiers.py  test_decay_math.py  test_embedding_cache.py  test_embedding_factory.py  test_embedding_schema.py  test_errors.py  test_filter_compiler.py  test_http_middleware.py  test_lifecycle_integration.py  test_mcp.py  test_models.py  test_oauth_security.py  test_oauth_store.py  test_query_safety.py  test_request_models.py  test_schema_queries.py  test_smoke_mcp.py
