[project]
name = "memory-palace"
version = "0.1.0"
description = "Personal memory palace with persistent ontology"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-ai>=0.1.0",
    "neo4j>=5.28.0",
    "voyageai>=0.3.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.0.0",
    "apscheduler>=3.10.0",
    "fastapi-mcp>=0.1.0",
    # ML dependencies (add as needed)
    # "umap-learn>=0.5.0",
    # "hdbscan>=0.8.0",
    # "bertopic>=0.16.0",
    # "sentence-transformers>=3.0.0",
    "logfire>=4.1.0",
    "ty>=0.0.1a16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["B008"]
