[project]
name = "memory-palace"
version = "0.1.0"
description = "Personal memory palace with persistent ontology"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-ai-slim[anthropic,openai]==1.107.0",
    "griffe>=1.15.0,<2",
    "neo4j>=5.28.0",
    "voyageai>=0.4.1",
    "httpx>=0.28.0",
    "structlog>=25.0.0",
    "apscheduler>=3.10.0",
    "logfire>=4.3.3",
    "pydantic-settings>=2.10.1",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.30",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "fastapi-mcp>=0.4.0",
    "mcp>=1.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_palace"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotations
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit security checks
]
ignore = [
    "B008", # Do not perform function call in argument defaults
    "E501", # Line too long (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__
"test_*.py" = ["ARG", "S101"] # Pytest assertions are intentional
"scripts/*.py" = ["T201"] # Scripts are interactive command-line programs

[tool.ruff.lint.isort]
known-first-party = ["memory_palace"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ty]
# Type checking with ty (Astral's new type checker)

[tool.ty.environment]
python-version = "3.13"
root = ["src"]
extra-paths = ["src"]

[tool.ty.src]
include = ["src/**/*.py"]
exclude = ["__pycache__", ".venv", "build", "dist", "**/tests/**", "docs/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-config", "--strict-markers"]
markers = [
    "integration: requires a running Neo4j (docker compose up -d neo4j)",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.26",
    "pytest-cov>=6.0",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]

[tool.coverage.run]
branch = true
source = ["memory_palace"]

[tool.coverage.report]
show_missing = true
skip_covered = true
